--- a/index.html
+++ b/index.html
@@ -655,11 +655,9 @@
   </div>
 
   <script>
-    // --- ILUSTRASI LUCU PER LEVEL (SVG INLINE) ---
+    // --- Ilustrasi SVG lucu per level ---
     function getIllustrationSvg(levelIdx) {
-      // 4 gaya berbeda, tetap sopan, tema gadget & keseimbangan
       if (levelIdx === 0) {
-        // Level 1: masih cari ritme, banyak gelembung notifikasi
         return `
 <svg viewBox="0 0 260 170">
   <defs>
@@ -695,7 +693,6 @@
   <circle cx="212" cy="72" r="3.2" fill="#90cafb"/>
 </svg>`;
       } else if (levelIdx === 1) {
-        // Level 2: mulai seimbang, ada timbangan gadget vs buku
         return `
 <svg viewBox="0 0 260 170">
   <defs>
@@ -727,7 +724,6 @@
   <path d="M145 54 q4 -8 -5 -12" stroke="#ffb65c" stroke-width="2" fill="none" stroke-linecap="round"/>
 </svg>`;
       } else if (levelIdx === 2) {
-        // Level 3: cukup terkendali, gadget + tanaman tumbuh
         return `
 <svg viewBox="0 0 260 170">
   <defs>
@@ -761,7 +757,6 @@
   <circle cx="64" cy="118" r="2.4" fill="#39a57b"/>
 </svg>`;
       } else {
-        // Level 4: role model, gadget + mahkota & bintang
         return `
 <svg viewBox="0 0 260 170">
   <defs>
@@ -1082,7 +1077,6 @@
         <span>${level.name}</span>
       </div>`;
 
-      // gambar ilustrasi lucu di sini
       html += `<div class="result-illustration">${getIllustrationSvg(levelIdx)}</div>`;
 
       html += `<p style="margin-top:8px;">${level.desc}</p>`;
